--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -17765,7 +17765,7 @@ truststore-password-help=Állítsa be a Truststore jelszavát, ha a HTTP SSL eng
 truststore-path=Truststore útvonal
 truststore-path-help=Állítsa be a Truststore fájl útvonalát, ha a HTTP SSL engedélyezve mező be van jelölve.
 truststore-type=Truststore típusa
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Próbálkozzon újra
 try-again-with-a-different-search=Próbálkozzon új kereséssel.
 trying-to-reconnect=Újracsatlakozási kísérlet.
