--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Nustatykite patikimumo saugyklos slaptažodį, jei paž
 truststore-path=Patikimumo saugyklos maršrutas (Automatic Translation)
 truststore-path-help=Nustatykite patikimumo saugyklos failo kelią, jei pažymėta HTTP SSL įgalinta. (Automatic Translation)
 truststore-type=Patikimumo saugyklos tipas (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=pabandyk dar kartą (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Bandoma prisijungti iš naujo. (Automatic Translation)
