--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Установите пароль в truststore, есл
 truststore-path=Путь доверительного магазина (Automatic Translation)
 truststore-path-help=Установите путь к файлу truststore, если http SSL Enabled будет проверен. (Automatic Translation)
 truststore-type=Тип трастстора (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Повторить (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Пытаюсь восстановить связь. (Automatic Translation)
