--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Ange lösenordet till förtroendelager om HTTP SSL akti
 truststore-path=Sökväg till förtroendelager
 truststore-path-help=Ange sökväg till förtroendelager om HTTP SSL aktiverat har markerats.
 truststore-type=Typ av förtroendelager
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Försök igen
 try-again-with-a-different-search=Testa igen med en annan sökning.
 trying-to-reconnect=Försök att ansluta igen.
