--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Đặt mật khẩu cho truststore nếu HTTP SSL kích
 truststore-path=Đường dẫn Truststore (Automatic Translation)
 truststore-path-help=Đặt đường dẫn đến tệp truststore nếu HTTP SSL kích hoạt được kiểm tra. (Automatic Translation)
 truststore-type=Loại Truststore (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Thử lại (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Cố gắng kết nối lại. (Automatic Translation)
