--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=قم بتعيين كلمة المرور إلى متجر
 truststore-path=مسار متجر الثقة
 truststore-path-help=قم بتعيين المسار إلى ملف متجر الثقة في حالة اختيار تمكين HTTP SSL.
 truststore-type=نوع مخزن الثقة
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=حاول مرة أخرى
 try-again-with-a-different-search=حاول مرة أخرى بعملية بحث مختلفة.
 trying-to-reconnect=محاولة إعادة الاتصال.
