--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Задайте паролата на truststore ако 
 truststore-path=Пътека за гаранти (Automatic Translation)
 truststore-path-help=Задайте пътя до truststore файл, ако е отметнато HTTP SSL поддръжка. (Automatic Translation)
 truststore-type=Тип на truststore (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Опитайте отново (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Опитвам се да се свържа отново. (Automatic Translation)
