--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -17764,7 +17764,7 @@ truststore-password-help=Definiu la contrasenya al truststore si s'ha selecciona
 truststore-path=Camí del truststore
 truststore-path-help=Definiu el camí del truststore si s'ha seleccionat l'opció HTTP SSL habilitat.
 truststore-type=Tipus de truststore
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Torna-ho a provar
 try-again-with-a-different-search=Torneu-ho a provar amb una cerca diferent.
 trying-to-reconnect=S'està provant de tornar a connectar.
