--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Angiv adgangskoden til tillidsbutikken, hvis HTTP SSL a
 truststore-path=Sti til tillidslager (Automatic Translation)
 truststore-path-help=Angiv stien til truststore-filen, hvis HTTP SSL aktiveret er markeret. (Automatic Translation)
 truststore-type=Type af tillidslager (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Prøv igen (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Forsøger at genoprette forbindelsen. (Automatic Translation)
