--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Atur kata sandi ke truststore jika HTTP SSL Diaktifkan 
 truststore-path=Jalur Truststore (Automatic Translation)
 truststore-path-help=Atur jalur ke file truststore jika HTTP SSL Diaktifkan diperiksa. (Automatic Translation)
 truststore-type=Tipe Truststore (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Coba lagi (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Mencoba untuk terhubung kembali. (Automatic Translation)
