--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Setkan kata laluan kepada pemegang amanah jika HTTP SSL
 truststore-path=Laluan Pemegang Amanah (Automatic Translation)
 truststore-path-help=Setkan laluan ke fail pemegang amanah jika HTTP SSL Didayakan disemak. (Automatic Translation)
 truststore-type=Jenis Pemegang Amanah (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Cuba lagi (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Cuba untuk menyambung semula. (Automatic Translation)
