--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Sett passordet til truststore hvis HTTP SSL aktivert er
 truststore-path=Bane til truststore (Automatic Translation)
 truststore-path-help=Sett banen til truststore-filen hvis HTTP SSL aktivert er merket. (Automatic Translation)
 truststore-type=Truststore Type (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=prøv igjen (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Prøver å koble til på ny.
