--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -17765,7 +17765,7 @@ truststore-password-help=Stel het wachtwoord voor de truststore in als "Http SSL
 truststore-path=Pad naar de truststore
 truststore-path-help=Stel het pad voor het truststorebestand in als "Http SSL ingeschakeld" is geselecteerd.
 truststore-type=Truststoretype
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Probeer opnieuw
 try-again-with-a-different-search=Probeer het opnieuw met een andere zoekopdracht.
 trying-to-reconnect=Poging om opnieuw verbinding te maken.
