--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=ตั้งรหัสผ่านเป็น trusts
 truststore-path=พาธ Truststore
 truststore-path-help=กำหนดพาธไปยังไฟล์ truststore หากเลือก HTTP SSL เปิดใช้งาน
 truststore-type=ประเภท Truststore
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=ลองใหม่อีกครั้ง
 try-again-with-a-different-search=ลองอีกครั้งด้วยการค้นหาอื่น
 trying-to-reconnect=กำลังพยายามเชื่อมต่อใหม่
