--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=HTTP SSL Etkin ise parolayı güven deposuna ayarlayın
 truststore-path=Güven Deposu Yolu (Automatic Translation)
 truststore-path-help=HTTP SSL Etkin ise, güven deposu dosyasının yolunu ayarlayın. (Automatic Translation)
 truststore-type=Güven Deposu Türü (Automatic Translation)
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation. (Automatic Copy)
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
 try-again=Yeniden Deneyin (Automatic Translation)
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Yeniden bağlanmaya çalışıyorum. (Automatic Translation)
