--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -90,7 +90,7 @@ a-page-cannot-become-a-child-of-a-page-that-is-not-parentable=Une page ne peut p
 a-page-cannot-become-a-child-of-itself=Une page ne peut pas être fille d'elle-même.
 a-page-may-not-contain-more-than-x-portlets=Une page ne peut contenir plus de {0} portlets.
 a-page-template-entry-with-that-name-already-exists=Une entrée de modèle de page utilise déjà ce nom.
-a-page-template-set-must-first-be-created-before-you-can-create-your-page-template=A page template set must first be created before you can create your page template. (Automatic Copy)
+a-page-template-set-must-first-be-created-before-you-can-create-your-page-template=Un ensemble de modèles de page doit d'abord être créé avant de pouvoir créer votre modèle de page.
 a-page-variation-with-that-name-already-exists=Une variation de page avec ce nom existe déjà.
 a-pingback-is-a-comment-that-is-created-when-you-link-to-another-blog-post-where-pingbacks-are-enabled=Un pingback est un commentaire crée lorsque vous accédez à un autre blog où les pingbacks sont activés.
 a-previous-version=Une version précédente
@@ -741,7 +741,7 @@ add-columns=Ajouter des colonnes
 add-columns-to-start-creating-a-view=Ajoutez des colonnes pour commencer à créer une vue.
 add-comment=Ajouter un commentaire
 add-comments=Ajouter des commentaires
-add-condition=Add Condition (Automatic Copy)
+add-condition=Ajouter une condition
 add-consumer=Ajouter un client
 add-consumer-registration=Ajouter l'inscription du client
 add-contact=Ajouter un contact
@@ -2622,7 +2622,7 @@ calculate-the-shipping-based-on-a-percentage-of-the-total-amount-of-the-purchase
 calendar=Calendrier
 calendar-bookings=Événement
 calendar-does-not-serve-unknown-resource-x=Le calendrier ne gère pas la ressource inconnue {0}.
-calendar-item-color-picker-press-space-to-enter-the-color-picker=Calendar Item Color Picker: Press space to enter the color picker. (Automatic Copy)
+calendar-item-color-picker-press-space-to-enter-the-color-picker=Sélecteur de couleur d'élément de calendrier : appuyez sur espace pour entrer dans le sélecteur de couleur.
 calendar-notification-templates=Modèles de notification du calendrier
 calendar-resource-already-exists=Cette ressource calendrier existe déjà.
 calendar-resources=Resources du calendrier
@@ -3464,7 +3464,7 @@ color-neutral-8=Couleur Neutre 8
 color-neutral-9=Couleur Neutre 9
 color-neutral-10=Couleur Neutre 10
 color-picker=Récolteuse de couleur
-color-picker.-color-selected-x.-use-arrow-keys-to-move-to-different-colors.-press-enter-or-space-to-select-a-color.-press-escape-to-leave-the-color-picker=Color Picker. Color {0} selected. Use arrow keys to move to different colors. Press enter or space to select a color. Press escape to leave the color picker. (Automatic Copy)
+color-picker.-color-selected-x.-use-arrow-keys-to-move-to-different-colors.-press-enter-or-space-to-select-a-color.-press-escape-to-leave-the-color-picker=Sélecteur de couleurs. Couleur {0} sélectionnée. Utilisez les touches fléchées pour passer à différentes couleurs. Appuyez sur Entrée ou Espace pour sélectionner une couleur. Appuyez sur Échap pour quitter le sélecteur de couleurs.
 color-scheme=Assortiments de couleurs
 color-schemes=Assortiments de couleurs
 color-schemes-x=Jeux de couleur ({0})
@@ -3492,7 +3492,7 @@ color-state-warning-lighten-2=Couleur d'état avertissement claire 2
 color-system=Système de couleur
 color-text=Couleur du texte
 color-url=Couleur d'URL
-color-x-selected=Color {0} selected. (Automatic Copy)
+color-x-selected=Couleur {0} sélectionnée.
 colors=Couleurs
 column=Colonne
 column-label=Libellé de colonne
@@ -10715,7 +10715,7 @@ no-outstanding-invites=Pas d'invitation exceptionnelle.
 no-page-template-could-be-imported=Aucun modèle de page n'a pu être importé.
 no-pages=Mes pages
 no-pages-were-found-that-matched-the-keywords-x=Aucune page n'a été trouvée avec les mots clés suivants : {0}.
-no-parameters-were-found=No parameters were found. (Automatic Copy)
+no-parameters-were-found=Aucun paramètre n'a été trouvé.
 no-password-policies-were-found=Aucune politique de mot de passe n'a été trouvée.
 no-payment-terms=Aucune condition de paiement
 no-pending-invites=Aucune invitation en attente.
@@ -13218,7 +13218,7 @@ remove-all-registered-fido2-authenticators=Supprimer tous les authentificateurs 
 remove-all-translation-overrides=Supprimer toutes les substitutions de traduction
 remove-attachment=Supprimer la pièce jointe
 remove-custom-tags=Supprimer des étiquettes personnalisées
-remove-dl-preview-cts-content-data=Remove DL Preview Change Tracking Store Content Data (Automatic Copy)
+remove-dl-preview-cts-content-data=Supprimer les données de contenu de stockage de suivi des changements d'aperçu de bibliothèque de documents
 remove-duplicate-field=Supprimer le champ en double {0}
 remove-expired-journal-articles=Supprimer les articles de journal expirés.
 remove-favorite=Supprimer des favoris
@@ -14034,7 +14034,7 @@ see-all-entries=Afficher toutes les entrées
 see-all-scheduled-publishing-events=Visualiser tous les événements planifiés pour publication
 see-current-results=Voir les résultats actuels
 see-full-image=Voir l'image en grand
-see-in-page-templates=See in Page Templates (Automatic Copy)
+see-in-page-templates=Voir dans les modèles de page
 see-items=Afficher les éléments
 see-large-photo=Voir la photo agrandie
 see-more=Voir davantage
@@ -14100,7 +14100,7 @@ select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Sélec
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-application=Sélectionner une liste existant ou ajouter une liste pour l'afficher dans cette application.
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Sélectionner une liste existante ou ajouter une liste à afficher dans ce portlet.
 select-an-existing-one=Sélectionner un existant
-select-an-existing-set-or-create-a-new-one-to-save-your-page-template=Select an existing set or create a new one to save your page template. (Automatic Copy)
+select-an-existing-set-or-create-a-new-one-to-save-your-page-template=Sélectionnez un ensemble existant ou créez-en un nouveau pour enregistrer votre modèle de page.
 select-an-existing-specification=Sélectionner une spécification existante
 select-and-copy=Sélectionner et copier
 select-another=Sélectionner un autre
@@ -14162,7 +14162,7 @@ select-entry=Sélectionner l'entrée
 select-existing=Sélectionner l'existant
 select-existing-content-or-add-terms-of-use-in-the-space-below=Sélectionne du contenu existant ou ajoutez les Conditions d'utilisation dans l'espace ci-dessous.
 select-existing-content-or-add-the-url-below=Sélectionnez du contenu existant ou ajoutez l'URL ci-dessous.
-select-existing-one=Select Existing One (Automatic Copy)
+select-existing-one=Sélectionnez un existant
 select-experience=Sélectionner l'expérience
 select-experiences=Sélectionnez des expériences
 select-favicon=Sélectionner un Favicon
@@ -14210,7 +14210,7 @@ select-order=Sélectionner un compte
 select-order-type=Sélectionnez le type de commande
 select-other-item=Sélectionnez un autre élément
 select-page=Sélectionner la page
-select-page-template-set=Select Page Template Set (Automatic Copy)
+select-page-template-set=Sélectionner l'ensemble de modèles de page
 select-pages=Pages Choisies
 select-parent=Sélectionner Parent
 select-parent-site=Sélectionner un site parent
@@ -14275,8 +14275,8 @@ select-the-state-flow=Sélectionner le flux d'état
 select-the-type-of-editor-to-use-while-editing-xml-and-xsl=Sélectionnez le type d'éditeur à utiliser quand des XML et des XSL sont édités.
 select-the-vocabulary-or-category-to-be-displayed=Sélectionnez le vocabulaire ou la catégorie à afficher.
 select-theme-css-client-extension=Sélectionnez l'extension du client CSS du thème
-select-theme-spritemap-client-extension=Select Theme Spritemap Client Extension (Automatic Copy)
-select-this-article=Select This Article (Automatic Copy)
+select-theme-spritemap-client-extension=Sélectionnez l'extension du client Spritemap du thème
+select-this-article=Sélectionner cet article
 select-this-category=Sélectionnez cette catégorie
 select-this-folder=Sélectionnez ce dossier
 select-this-level=Sélectionnez ce niveau
@@ -16877,8 +16877,8 @@ theme-js=JS du thème
 theme-plugin=Plugin de Thème
 theme-plugins=Plugins de Thème
 theme-settings=Paramètres de thème
-theme-spritemap-client-extension=Theme Spritemap Client Extension (Automatic Copy)
-theme-svg=Theme SVG Spritemap (Automatic Copy)
+theme-spritemap-client-extension=Extension du client Spritemap du thème
+theme-svg=Thème SVG Spritemap
 themes=Thèmes
 then=Alors
 then[object]=Alors
@@ -17583,7 +17583,7 @@ to-add-a-fixed-tax-rate-you-must-add-a-tax-category=Pour ajouter un taux d'impos
 to-add-a-product-to-an-order,-first-select-an-account=Pour ajouter des produits à une commande, sélectionnez d'abord un compte.
 to-add-a-widget-to-the-page-just-drag-it=Faire glisser un widget pour le placer sur la page.
 to-add-collaborators-share-the-file-again=Pour ajouter des collaborateurs, partagez à nouveau le fichier.
-to-add-or-edit-the-existing-spritemap-simply-copy-paste-and-make-changes-as-needed-to-your-registered-extension=To add or edit the existing spritemap, simply copy/paste and make changes as needed to your registered extension. (Automatic Copy)
+to-add-or-edit-the-existing-spritemap-simply-copy-paste-and-make-changes-as-needed-to-your-registered-extension=Pour ajouter ou modifier le spritemap existant, il vous suffit de copier/coller et d'apporter les modifications nécessaires à votre extension enregistrée.
 to-address=Pour adresser
 to-allow-pingbacks,-please-also-ensure-the-entry's-guest-view-permission-is-enabled=Pour permettre les "pingbacks", assurez-vous également que les permissions authorisent un visiteur à voir l'entrée.
 to-allow-trackbacks,-please-also-ensure-the-entry's-guest-view-permission-is-enabled=Pour permettre des "trackbacks", assurez-vous également que les permissions authorisent un visiteur à voir l'entrée.
@@ -17625,7 +17625,7 @@ token-connection-timeout-help=Définissez la durée d'attente (en millisecondes)
 token-endpoint=Extrémité de jeton
 token-endpoint-help=Définissez l'extrémité de jeton pour le fournisseur OpenID Connect.
 token-introspection=Introspection de jeton
-token-is-not-valid.-please-insert-a-valid-analytics-cloud-token=Token is not valid. Please insert a valid Analytics Cloud token. (Automatic Copy)
+token-is-not-valid.-please-insert-a-valid-analytics-cloud-token=Le jeton n'est pas valide. Veuillez insérer un jeton Analytics Cloud valide.
 token-location=Emplacement du jeton
 token-location-COOKIE=Cookie
 token-location-REQUEST=Requête
@@ -17764,7 +17764,7 @@ truststore-password-help=Définissez le mot de passe sur le fichier de clés cer
 truststore-path=Chemin du magasin de confiance
 truststore-path-help=Définissez le chemin d'accès au fichier de clés certifiées si HTTP SSL activé est coché.
 truststore-type=Type de magasin de confiance
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
+truststore-type-help=Définissez le type de fichier de clés certifiées si HTTP SSL activé est coché.
 try-again=Réessayer
 try-again-with-a-different-search=Essayez à nouveau avec une recherche différente.
 trying-to-reconnect=Tentative de reconnexion.
@@ -18262,7 +18262,7 @@ use-the-same-look-and-feel-of-the-pages-in-which-this-template-is-used=Utiliser 
 use-the-same-look-and-feel-of-the-x=Utiliser la même présentation que {0}.
 use-the-token-genereted-in-your-analytics-cloud-to-connect-this-workspace=Utilisez le jeton généré dans votre Analytics Cloud pour connecter cet espace de travail.
 use-this-client-extension-to-fully-replace-the-default-css-contained-in-the-theme=Utilisez cette extension client pour remplacer entièrement le CSS par défaut contenu dans le thème.
-use-this-client-extension-to-fully-replace-the-default-spritemap-contained-in-the-theme=Use this client extension to fully replace the default spritemap contained in the theme. (Automatic Copy)
+use-this-client-extension-to-fully-replace-the-default-spritemap-contained-in-the-theme=Utilisez cette extension client pour remplacer entièrement le spritemap par défaut contenu dans le thème.
 use-this-template=Utiliser ce modèle
 use-thumbs-up-thumbs-down=Utiliser pouce vers le haut/pouce vers le bas
 use-to-match-users=Utiliser pour faire correspondre les utilisateurs
