--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -17761,7 +17761,7 @@ truststore-password-help=HTTP SSL 사용이 선택된 경우 신뢰 저장소에
 truststore-path=신뢰 저장소 경로
 truststore-path-help=HTTP SSL 사용이 선택된 경우 신뢰 저장소 파일의 경로를 설정하십시오.
 truststore-type=신뢰 저장소 유형
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
+truststore-type-help=HTTP SSL 사용이 선택된 경우 신뢰 저장소 유형을 설정하십시오.
 try-again=다시 시도하십시오.
 try-again-with-a-different-search=다른 검색어로 다시 시도하세요.
 trying-to-reconnect=연결을 다시 시도합니다.
