--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -17764,7 +17764,7 @@ truststore-password-help=Permite establecer la contraseña para el almacén de c
 truststore-path=Ruta del almacén de confianza
 truststore-path-help=Permite establecer la ruta del archivo del almacén de confianza si está activada la opción «HTTP SSL habilitado».
 truststore-type=Tipo de almacén de confianza
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
+truststore-type-help=Permite establecer el tipo de almacén de confianza si está activada la opción «HTTP SSL habilitado».
 try-again=Vuelva a intentarlo
 try-again-with-a-different-search=Vuelva a intentarlo con otra búsqueda.
 trying-to-reconnect=Intentando volver a conectar.
