--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Définissez le mot de passe sur le fichier de clés cer
 truststore-path=Chemin du magasin de confiance
 truststore-path-help=Définissez le chemin d'accès au fichier de clés certifiées si HTTP SSL activé est coché.
 truststore-type=Type de magasin de confiance
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
+truststore-type-help=Définissez le type de fichier de clés certifiées si HTTP SSL activé est coché.
 try-again=Réessayer
 try-again-with-a-different-search=Try again with a different search. (Automatic Copy)
 trying-to-reconnect=Tentative de reconnexion.
