--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -17762,7 +17762,7 @@ truststore-password-help=Defina a senha para o truststore se a opção HTTP SSL 
 truststore-path=Caminho do Truststore
 truststore-path-help=Defina o caminho para o arquivo truststore se a opção HTTP SSL Habilitado estiver marcada.
 truststore-type=Tipo de Truststore
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g. JKS or PKCS#12). Learn more in your JDK's KeyStore type documentation. (Automatic Copy)
+truststore-type-help=Defina o tipo de truststore se a opção HTTP SSL Habilitado estiver marcada.
 try-again=Tentar Novamente
 try-again-with-a-different-search=Tente novamente com uma busca diferente.
 trying-to-reconnect=Tentando reconectar.
