--- a/workspaces/sample-default-workspace/client-extensions/TODO.txt
+++ b/workspaces/sample-default-workspace/client-extensions/TODO.txt
@@ -3,3 +3,7 @@ foo-object-definition.json.
 
 Use meaning external reference codes instead of generated UUID for
 foo-object-definition.json.
+
+Fix create_remote_app.sh
+	name: ${CUSTOM_ELEMENT_NAME}
+	This should be something like "Fox Remote App" instead of "fox-remote-app"
